# django-sage-mailbox

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  README.md  manage.py  mypy.ini  pyproject.toml  requirements.txt  setup.py
docs/source/: conf.py  index.rst
docs/source/getting_started/: index.rst  installation.rst  introduction.rst
kernel/: asgi.py  settings.py  urls.py  wsgi.py
requirements/: dev.txt  prod.txt
sage_mailbox/: apps.py  checks.py  conf.py  constants.py  exc.py  utils.py  validators.py
sage_mailbox/admin/: __init__.py  email.py  mailbox.py
sage_mailbox/admin/actions/: __init__.py  email.py  mailbox.py
sage_mailbox/admin/mixins/: __init__.py  email.py
sage_mailbox/filters/: __init__.py  message.py
sage_mailbox/locale/ar/LC_MESSAGES/: django.po
sage_mailbox/locale/en/LC_MESSAGES/: django.po
sage_mailbox/locale/fa/LC_MESSAGES/: django.po
sage_mailbox/models/: __init__.py  attachment.py  email.py  flag.py  mailbox.py
sage_mailbox/models/mixins/: timestamp.py
sage_mailbox/repository/: __init__.py  manager.py  queryset.py  service.py
sage_mailbox/signals/: __init__.py  email.py
sage_mailbox/templates/admin/email/: change_list.html
sage_mailbox/templates/admin/mailbox/: change_list.html
sage_mailbox/templatetags/: sage_mailbox.py
sage_mailbox/tests/models/: test_email.py
sage_mailbox/tests/repository/: test_queryset.py  test_service.py
sage_mailbox/tests/validators/: test_comma_separated.py  test_folder_name.py
